View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028392 | Open CASCADE | OCCT:Shape Healing | public | 2017-01-26 10:07 | 2017-09-29 16:25 |
Reporter | abv | Assigned To | apn | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.2.0 | Fixed in Version | 7.2.0 | ||
Summary | 0028392: Shape Processing - some checks have no option to switch off | ||||
Description | Some checks done by ShapeFix tools cannot be switched off in ShepeProcessing via usage of resource file | ||||
Steps To Reproduce | n/a | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR28392 has been created by abv. SHA-1: 64d2028f9c5d337fc78459e4af6e5fa3abd736d5 Detailed log of new commits: Author: abv Date: Thu Jan 26 10:15:45 2017 +0300 0028392: Shape Processing - some checks have no option to switch off Added option ShapeFix_Solid::FixShellOrientationMode allowing to switch off analysis and fixing of orientations of shell(s) in solid. Options FixVertexToleranceMode, FixShellOrientationMode, FixFaceOrientationMode are added to Shepe Processing resource file so that they can be manipulated. |
|
Fix pushed to CR28392, please review |
|
In the ShapeFix_Solid cycle for counting number of sub-shapes for solid (lines 398-401): // Calculate number of sub-objects Standard_Integer aNbSub = 0; for (TopoDS_Iterator aShIt(S); aShIt.More(); aShIt.Next() ) aNbSub++; is not correspond to next cycle iteration by shells with using of progress indicator ( lines 409 -416): // Start progress scope (no need to check if progress exists -- it is safe) Message_ProgressSentry aPSentryFixShell(theProgress, "Fixing shell", 0, aNbSub, 1); // Fix shell by shell using ShapeFix_Shell tool for ( TopExp_Explorer aExpSh(S, TopAbs_SHELL); aExpSh.More() && aPSentryFixShell.More(); aExpSh.Next(), aPSentryFixShell.Next() ) { TopoDS_Shape sh = aExpSh.Current(); if (sh.ShapeType() != TopAbs_SHELL) continue; This code can lead to invalid situation because solid can contain non-manifold edges or vertices. |
|
Branch CR28392 has been updated forcibly by abv. SHA-1: a9269daef05512f0295571f40c4d716d1f2629c2 |
|
I have removed changes not required for the new options (it was attempt to improve a bit logic of the code, but this needs more time); please review again |
|
Branch CR28392 is ready to be tested |
|
Branch CR28392 has been updated forcibly by mkv. SHA-1: 0577a701ef867dbd9e18963462e31c128f3d136f |
|
Dear BugMaster, Branch CR28392 was rebased on IR-2017-01-26 of occt git-repository. SHA-1: 0577a701ef867dbd9e18963462e31c128f3d136f |
|
Dear BugMaster, Branch CR28392 from occt git-repository (and IR-2017-01-26 from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 0577a701ef867dbd9e18963462e31c128f3d136f Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1148 Regressions/Differences/Improvements: http://occt-tests/CR28392-master-Products/Debian70-64/summary.html http://occt-tests/CR28392-master-Products/Windows-64-VC10/summary.html Failed: sat doc_1 I8, I9, J1, J9 Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92556453 / 92308192 [+0.27%] Total CPU difference: 19945.870000000195 / 19914.260000000217 [+0.16%] products component : Total MEMORY difference: 31449248 / 31454864 [-0.02%] Total CPU difference: 5599.049999999985 / 5542.159999999981 [+1.03%] Testing on Windows: occt component : Total MEMORY difference: 57621096 / 57618048 [+0.01%] Total CPU difference: 18778.589174798464 / 18683.178963198647 [+0.51%] products component : Total MEMORY difference: 22659028 / 22621210 [+0.17%] Total CPU difference: 5567.894091399983 / 5570.546108399986 [-0.05%] There are no differences in images found by testdiff. |
|
Dear abv, Branch CR28392 has been rejected due to: - regressions/differences/improvements |
|
Branch CR28392 has been updated by abv. SHA-1: f96517518e13531fd62fcc76dc7ec829735ea040 Detailed log of new commits: Author: abv Date: Thu Feb 2 13:18:24 2017 +0300 // default value of parameter FixVertexTolMode is corrected |
|
Fix pushed to CR28392, please test. |
|
Branch CR28392 has been updated forcibly by mkv. SHA-1: d0e9e3f1d6015a7701a1b5f047ae9dcd092a4871 |
|
Dear BugMaster, Branch CR28392 was rebased on current master of occt git-repository. SHA-1: d0e9e3f1d6015a7701a1b5f047ae9dcd092a4871 |
|
Dear BugMaster, Branch CR28392 from occt git-repository (and CR28392 from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: d0e9e3f1d6015a7701a1b5f047ae9dcd092a4871 SHA-1: 3476c80699a39f3c7a4a7fa4fdea3d269710d6f1 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 63 (63 on master) Windows: 0 (0 on master) MacOS : 1151 Regressions/Differences/Improvements: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 92025869 / 92286412 [-0.28%] Total CPU difference: 19944.990000000205 / 19914.050000000218 [+0.16%] products component : Total MEMORY difference: 31505863 / 31477908 [+0.09%] Total CPU difference: 5698.309999999982 / 5544.959999999981 [+2.77%] Testing on Windows: occt component : Total MEMORY difference: 57621240 / 57618048 [+0.01%] Total CPU difference: 18276.25035469864 / 18683.178963198647 [-2.18%] products component : Total MEMORY difference: 22659214 / 22621210 [+0.17%] Total CPU difference: 5496.726435199977 / 5570.546108399986 [-1.33%] There are no differences in images found by testdiff. |
|
Dear BugMaster, Branch CR28392 from occt git-repository and CR28392 from products git-repository are TESTED. |
|
Branch CR28392 has been deleted by inv. SHA-1: d0e9e3f1d6015a7701a1b5f047ae9dcd092a4871 |
occt: master bf961e3c 2017-02-09 12:45:51 Committer: apn Details Diff |
0028392: Shape Processing - some checks have no option to switch off Added option ShapeFix_Solid::FixShellOrientationMode allowing to switch off analysis and fixing of orientations of shell(s) in solid. Options FixVertexToleranceMode, FixShellOrientationMode, FixFaceOrientationMode are added to Shepe Processing resource file so that they can be manipulated. |
Affected Issues 0028392 |
|
mod - src/ShapeFix/FILES | Diff File | ||
mod - src/ShapeFix/ShapeFix_Solid.cxx | Diff File | ||
mod - src/ShapeFix/ShapeFix_Solid.hxx | Diff File | ||
mod - src/ShapeProcess/ShapeProcess_OperLibrary.cxx | Diff File | ||
mod - src/XSTEPResource/IGES | Diff File | ||
mod - src/XSTEPResource/STEP | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-01-26 10:07 | abv | New Issue | |
2017-01-26 10:07 | abv | Assigned To | => gka |
2017-01-26 10:16 | git | Note Added: 0063062 | |
2017-01-26 10:40 | abv | Note Added: 0063064 | |
2017-01-26 10:40 | abv | Status | new => resolved |
2017-01-26 10:40 | abv | Steps to Reproduce Updated | |
2017-01-26 11:39 | gka | Note Added: 0063067 | |
2017-01-26 11:40 | gka | Assigned To | gka => abv |
2017-01-26 11:40 | gka | Status | resolved => assigned |
2017-01-26 11:50 | git | Note Added: 0063069 | |
2017-01-26 11:51 | abv | Note Added: 0063070 | |
2017-01-26 11:51 | abv | Assigned To | abv => gka |
2017-01-26 11:51 | abv | Status | assigned => resolved |
2017-01-26 11:54 | gka | Note Added: 0063072 | |
2017-01-26 11:54 | gka | Assigned To | gka => bugmaster |
2017-01-26 11:54 | gka | Status | resolved => reviewed |
2017-01-26 17:23 |
|
Assigned To | bugmaster => mkv |
2017-01-26 17:31 | git | Note Added: 0063098 | |
2017-01-27 15:49 |
|
Note Added: 0063123 | |
2017-01-27 15:50 |
|
Note Added: 0063124 | |
2017-01-27 15:50 |
|
Note Added: 0063125 | |
2017-01-27 15:50 |
|
Assigned To | mkv => abv |
2017-01-27 15:50 |
|
Status | reviewed => feedback |
2017-01-27 15:50 |
|
Test case number | => Not needed |
2017-01-27 16:00 |
|
Note Edited: 0063123 | |
2017-01-27 16:00 |
|
Note Edited: 0063124 | |
2017-02-02 13:18 | git | Note Added: 0063357 | |
2017-02-02 13:22 | abv | Note Added: 0063359 | |
2017-02-02 13:22 | abv | Assigned To | abv => bugmaster |
2017-02-02 13:22 | abv | Status | feedback => reviewed |
2017-02-02 14:14 |
|
Assigned To | bugmaster => mkv |
2017-02-02 15:07 | git | Note Added: 0063367 | |
2017-02-07 18:35 |
|
Note Added: 0063505 | |
2017-02-07 18:36 |
|
Note Added: 0063506 | |
2017-02-07 18:36 |
|
Note Added: 0063507 | |
2017-02-07 18:36 |
|
Assigned To | mkv => bugmaster |
2017-02-07 18:36 |
|
Status | reviewed => tested |
2017-02-10 14:33 | apn | Changeset attached | => occt master bf961e3c |
2017-02-10 14:33 | apn | Assigned To | bugmaster => apn |
2017-02-10 14:33 | apn | Status | tested => verified |
2017-02-10 14:33 | apn | Resolution | open => fixed |
2017-03-20 14:36 | git | Note Added: 0064509 | |
2017-09-29 16:19 |
|
Fixed in Version | => 7.2.0 |
2017-09-29 16:25 |
|
Status | verified => closed |